# milvus-sdk-rust

./: .gitignore  .gitmodules  Cargo.toml  OWNERS  README.md  build.rs  codecov.yml  docker-compose.yml
.github/: mergify.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: main.yml
configs/: user.yaml
docs/: api-guide.md
examples/: authentication.rs  cdc.rs  collection.rs  database.rs  fp16_and_bf16.rs  index_example.rs  iterator.rs  main_example.rs  milvus26_features.rs  query_search.rs  resource_groups.rs
scripts/: run_tests.sh
src/: alias.rs  authentication.rs  cdc.rs  client.rs  collection.rs  config.rs  data.rs  database.rs  error.rs  iterator.rs  lib.rs  mutate.rs  options.rs  partition.rs  prelude.rs  query.rs  resource_group.rs  schema.rs  types.rs  utility.rs  utils.rs  value.rs
src/index/: mod.rs  utils.rs
src/proto/: milvus.proto.common.rs  milvus.proto.feder.rs  milvus.proto.milvus.rs  milvus.proto.msg.rs  milvus.proto.rg.rs  milvus.proto.schema.rs  mod.rs
tests/: TEST-STATUS.MD  alias.rs  cdc.rs  client.rs  collection.rs  connect.rs  database.rs  index.rs  iterator.rs  milvus26.rs  partition.rs  query.rs  rbac.rs  resource_group.rs  schema.rs  utility.rs  utils.rs  value.rs
tests/aggressivehpctesting/: aggressivetesting.md  mod.rs  phase_1_crud_and_indexing.rs  phase_2_search_and_query.rs  phase_3_soak_test.rs
tests/common/: mod.rs
tests/testsoutsideoftestsuite/: client_flush_collections.rs  client_keepalive.rs  client_search.rs  client_with_timeout.rs  collection_get_collection_stats.rs  collection_get_compaction_state.rs  collection_list_collections.rs  collection_release_collection.rs  mutate_delete.rs  partition_create_partition.rs  partition_drop_partition.rs  partition_get_partition_stats.rs  partition_has_partition.rs  partition_list_partitions.rs
