[package]
name = "milvus-sdk-rust"
description = "The official Milvus Rust SDK"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[lib]
name = "milvus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.8.2", features = ["tls", "tls-roots"] }
prost = "0.11.0"
tokio = { version = "1.17.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
strum = "0.24"
strum_macros = "0.24"
base64 = "0.21.0"
dashmap = "5.5.3"
# fp16/bf16 support
half = "2.4.1"

[build-dependencies]
tonic-build = { version = "0.8.2", default-features = false, features = [
    "prost",
] }

[dev-dependencies]
rand = "0.8.5"
futures = "0.3"
